--- a/frontend/components/ui/Button/index.mdx
+++ b/frontend/components/ui/Button/index.mdx
@@ -43,29 +43,8 @@ export const Example = () => {
   <Button variant='text'>Text</Button>
 </div>
 
-## Цвет
-```jsx
-<Button variant='default' color='red'>Default</Button>
-<Button variant='default' color='#333333'>Line</Button>
-<Button variant='line' color='#635e82'>Text</Button>
-<Button variant='text' color='orange'>Text</Button>
-```
-<div style={{ display: 'flex' }}>
-  <Button
-    variant='default'
-    color='red'
-    style={{ marginRight: '8px' }}
-  >Default</Button>
-  <Button
-    variant='line'
-    color='#333333'
-    style={{ marginRight: '8px' }}
-  >Line</Button>
-  <Button
-    variant='text'
-    color='orange'
-  >Text</Button>
-</div>
+## Размеры
+
 
 ## Загрузка
 Проп `loading` отвечает за статус загрузки. По умолчанию - `false`
